CSS changes for iCentral crap.

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Employee Directory</title>
-    <link rel="stylesheet" href="styles.css">
+    <!-- <link rel="stylesheet" href="ed_styles.css"> -->
   </head>
   <body>
     <div id="app"></div>
